Removed gallery images/Amended scroll feature on home page (less scrolling to reach 'Tour'section/quote on hero-image moved more to center+font changed/video has 100% width on 640px and smaller screens/'News' section button moved below input for email address /border added to email input section/button colours changed to purple+ reversed on hover

--- a/index.html
+++ b/index.html
@@ -146,10 +146,11 @@
 
 <!---------------------- About us Section  ---------------------->
 
+<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
+
 <section class="about-us" id="section3">
 
 <h2>About us</h2>
-<img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
 
 <div class="about-description">
 <p>In early 2017, a group of 5 strangers got together to form what is now The Revolution. Although their 
@@ -184,15 +185,40 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 
 </section>
 
+<!-- End of 'About-us' section -->
+
+<!---------- Gallery section ------------>
+
+<section class="gallery-header" id="section4">
+<h2>Gallery</h2>
+
+<div class="gallery-picture">
+<img src="images/unsplash.jpg" alt="Band-performance">
+<img src="images/unsplash2.jpg" alt="Fan-photo-band-performance">
+<img src="images/unsplash3.jpg" alt="Fan-photo-band-performance-2">
+<img src="images/unsplash4.jpg" alt="Band-behind-the-scene">
+
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+<img src="" alt="">
+
+</div>
+
+</section>
+<!---------- end gallery section ---->
+
+
 <!---------- Sign up for news section----------> 
-<section>
+<section id="section5">
 <div class="news-div">
 <form class="email-subscription">
+<h3>Keep up to date!</h3>
 <p>Subscribe below to receive the latest on band news, tours, and updates!</p>
 <label for="email"></label>
-<input type="email" placeholder="Email Address" required>
+<input class="email-input" type="email" placeholder="Email Address" required>
 <!-- class for button copied in from bootstrap-->
-<button class="btn btn-dark">Subscribe</button> 
+<button class="btn btn-dark subscribe-btn">Subscribe</button> 
 </form>
 </div>
 
@@ -201,51 +227,13 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 <!---------- End of News section ------------>
 
 
-<!---------- Gallery section ------------>
-
-<section class="gallery-header" id="section4">
-<h2>Gallery</h2>
-
-<div class="gallery-picture">
-<img src="images/unsplash.jpg" alt="Band-performance" class="gal-image">
-<img src="images/unsplash2.jpg" alt="Fan-photo-band-performance" class="gal-image">
-<img src="images/unsplash3.jpg" alt="Fan-photo-band-performance-2" class="gal-image">
-<img src="images/unsplash4.jpg" alt="Band-behind-the-scene" class="gal-image">
-
-<img src="images/drummer-unsplash5.jpg" alt="Drummer-solo-picture" class="gal-image">
-<img src="images/XXX.jpg" alt="">
-<img src="images/XXX.jpg" alt="">
-<img src="images/XXX.jpg" alt="">
-
-</div>
-</section>
-<!---------- end gallery section ---->
-
-
-
 <!---------- Footer section----------> 
 
-<section class="footer" id="section5">
+<section class="footer" id="section6">
 <div class="end-page-footer">
-
-
- <ul class="socials">
-    <li><a href="https://www.spotify.com/uk/" target="_blank"><i class="fab fa-spotify"></i></a></li>
-    <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-    <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-    <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-    <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-     <h6>Copyright &copy; The Revolution 2020</h6>
-
- </ul>
- 
+<h6>Copyright &copy; The Revolution 2020</h6> 
 </div>
-
-
 </section>
-
-
-
 
 <!--------------Bootstrap scripts -copied from 'Whiskey Drop' project (originally from Bootstrap)   ---->
 
