Added new image to gallery section/amended css on gallery section

--- a/index.html
+++ b/index.html
@@ -129,13 +129,6 @@
   <td>The o2 Brixton, London</td>
   <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
 </tr>
-
-<tr>
-  <td>11th December, 2021</td>
-  <td>The o2 Brixton, London</td>
-  <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="ticket">Ticket</a></td>
-</tr>
-
 </table>
 </div>
 </section>
@@ -149,7 +142,7 @@
 <img src="images/band-image-ecrop.jpg" alt="Band picture with crowd" class="band-img1">
 
 <section class="about-us" id="section3">
-
+<div class="about-container">
 <h2>About us</h2>
 
 <div class="about-description">
@@ -165,14 +158,14 @@ the usually constricted and defined genres.</p>
 
 <p>The group made their entrance to the music industry with their hit record <a class="music" href="https://open.spotify.com/track/602QT8hTuTVA4aSQWR13LB" target="_blank">'Sun'</a> 
 which remained on the The Hot 100 BillBoards chart for a period of 7 weeks. Following this, they released their first album 
-<a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn">‘Emerge’</a> in September 2017.</p>
+<a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn" target="_blank">‘Emerge’</a> in September 2017.</p>
 
 <p>The album was followed by various singles which contained a mixture of each members’ different style 
 bringing in music lovers from a variety of genres, and always aimed to not be defined by any specific set of rules.</p>
 
 <p>In similar fashion to those they looked up to, whilst having a set style, The Revolution work with, and produce 
 music from different genres (Rock, Hip Hop, Pop - to name a few). This can be seen in their most recent album released
-only in Novemeber 2019 - <a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn">'Prophecy'</a>.</p>
+only in Novemeber 2019 - <a class="music" href="https://open.spotify.com/album/1TU4tAlNzFbd1yw7FxI0Sn" target="_blank">'Prophecy'</a>.</p>
 
 <p>Making great stride, and having had the pleasures of working with the best of the best within the music 
 industry, The Revolution in being lined up for the five-day festival of contemporary performing arts that takes 
@@ -182,7 +175,7 @@ place in Pilton, Somerset (2021) - otherwise known as Glastonbury Festival!</p>
 <iframe width="450" height="315" src="https://www.youtube.com/embed/b99r48grKGI" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
 ></iframe>
-
+</div>
 </section>
 
 <!-- End of 'About-us' section -->
@@ -191,20 +184,21 @@ frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; pict
 
 <section class="gallery-header" id="section4">
 <h2>Gallery</h2>
-
-<div class="gallery-picture">
+<div class="row">
+<div class="column">
 <img src="images/unsplash.jpg" alt="Band-performance">
 <img src="images/unsplash2.jpg" alt="Fan-photo-band-performance">
-<img src="images/unsplash3.jpg" alt="Fan-photo-band-performance-2">
-<img src="images/unsplash4.jpg" alt="Band-behind-the-scene">
-
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-<img src="" alt="">
-
+<img src="images/band-members-playing-stage.jpg" alt="Band members playing on stage">
+<img src="images/people-enjoying-the-concert.jpg" alt="People enjoying the concert">
 </div>
 
+<div class="column">
+<img src="images/unsplash4.jpg" alt="Band-behind-the-scene">
+<img src="images/naomi-tamar-unsplash.jpg" alt="Drone image of bad performance">
+<img src="images/unsplash3.jpg" alt="Fan-photo-band-performance-2">
+</div>
+
+</div>
 </section>
 <!---------- end gallery section ---->
 
