--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://kit.fontawesome.com/538794ec36.js" crossorigin="anonymous"></script>
 
     
-    <link rel="stylesheet" href="css/style.min.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 
 </head>
 
@@ -30,7 +30,7 @@
  (Excluding social links)-->
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <div class="navbar-brand" href="#">The Revolution</div>
+  <div class="navbar-brand">The Revolution</div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
